Update video review
Update blog

--- a/videoreview.html
+++ b/videoreview.html
@@ -46,8 +46,19 @@
             <div class="assignment-2">
                 <img class="img-profile" src="chat.svg"  alt="Profile" height="200" width="200">
                 <p class="text-break text-profile">
-                  The video seemed good to me, it seems surprising to me that among so many 
-                  conversations that the world can have, only a small percentage is native.
+                  The percentage of native English speakers is very low.
+                </p>
+                <p class="text-break text-profile">           
+                  Being native can be an advantage of better pronunciation
+                </p>
+                <p class="text-break text-profile">              
+                  Have confidence in yourself to speak
+                </p>
+                <p class="text-break text-profile">
+                  Accept being wrong
+                </p>
+                <p class="text-break text-profile">
+                  Knowing the subject is important
                 </p>
             </div>
           </div>
