--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="assignment-2">
                 <img class="img-profile" src="circle-img.png"  alt="Profile" height="200" width="200">
                 <p class="text-break text-profile">
-                    My name is Ailed, I am 21 years old, I currently live in Mexico in the city.
+                    My name is Ailed, I am 21 years old, I currently live in Mexico City.
                     I studied Computer Systems Engineering, and I'm a frontend web developer with ReactJs, 
                     I really like listening to music and I want to buy an acoustic guitar.
                 </p>
