Update text Family
Update section Family

--- a/family.html
+++ b/family.html
@@ -48,8 +48,8 @@
                 <p class="text-break text-profile">
                     My family is big but this time I'm going to talk about my mom and my brother.
 
-                    My mother is an accountant, she is 52 years old and currently works independently.
-                    My brother is a Systems Engineer, he is 26 years old and is currently a Technical Leader IT in Buggy TLC
+                    My mother is an accountant, she is 52 and currently works independently.
+                    My brother is a Systems Engineer, he is 26 and currently he is a Technical Leader IT in Buggy TLC.
                 </p>
             </div>
           </div>
