Update text work brother
Add  text work brother

--- a/family.html
+++ b/family.html
@@ -52,6 +52,11 @@
                     My mother is an accountant, she is 52 and currently works independently.
                     My brother is a Systems Engineer, he is 26 and currently he is a Technical Leader IT in Buggy TLC.
                 </p>
+                <audio src="Recording_10.mp3" preload="auto" controls></audio>
+                <p class="text-break text-profile">
+                    I will talk about my brother, he's 26, he was born Mexico City, he likes a lot his work, he likes research and contribute.
+                    He's in charge of all data, secutiry and cloud computing of tecnology, also develop backend and frontend the bussines model and web desing.
+                </p>
             </div>
           </div>
     </section>
