Update text work brother
Correct text

--- a/family.html
+++ b/family.html
@@ -54,8 +54,8 @@
                 </p>
                 <audio src="Recording_10.mp3" preload="auto" controls></audio>
                 <p class="text-break text-profile">
-                    I will talk about my brother, he's 26, he was born Mexico City, he likes a lot his work, he likes research and contribute.
-                    He's in charge of all data, secutiry and cloud computing of tecnology, also develop backend and frontend the bussines model and web desing.
+                    I will talk about my brother, he's 26, he was born Mexico City, he likes his work a lot, he likes research and contribute.
+                    He's in charge of all data, security and cloud computing of tecnology, also develop backend and frontend the bussines model and web desing.
                 </p>
             </div>
           </div>
