--- a/assignment5.html
+++ b/assignment5.html
@@ -7,14 +7,14 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>English Class</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
-            <img src="../images/icon-header.svg" alt="Age" height="50" width="50">
+            <img src="images/icon-header.svg" alt="Age" height="50" width="50">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDarkDropdown" aria-controls="navbarNavDarkDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -26,10 +26,10 @@
                   Sections
                 </a>
                 <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                    <li><a class="dropdown-item" href="../view/vocabulary.html">Vocabulary Class 1</a></li>
-                    <li><a class="dropdown-item" href="../view/index.html">Introduction</a></li>
-                    <li><a class="dropdown-item" href="../view/family.html">Family description</a></li>
-                    <li><a class="dropdown-item" href="../view/videoreview.html">Video review</a></li>
+                    <li><a class="dropdown-item" href="vocabulary.html">Vocabulary Class 1</a></li>
+                    <li><a class="dropdown-item" href="index.html">Introduction</a></li>
+                    <li><a class="dropdown-item" href="family.html">Family description</a></li>
+                    <li><a class="dropdown-item" href="videoreview.html">Video review</a></li>
                     <li><a class="dropdown-item" href="#">Assignment 5</a></li>
                 </ul>
               </li>
