Update blog assignment 5, 6, and 7

--- a/assignment5.html
+++ b/assignment5.html
@@ -26,11 +26,13 @@
                   Sections
                 </a>
                 <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                    <li><a class="dropdown-item" href="vocabulary.html">Vocabulary Class 1</a></li>
                     <li><a class="dropdown-item" href="index.html">Introduction</a></li>
+                    <li><a class="dropdown-item" href="vocabulary.html">Vocabulary Class 1</a></li>
                     <li><a class="dropdown-item" href="family.html">Family description</a></li>
                     <li><a class="dropdown-item" href="videoreview.html">Video review</a></li>
                     <li><a class="dropdown-item" href="#">Assignment 5</a></li>
+                    <li><a class="dropdown-item" href="assignment6.html">Assignment 6</a></li>
+                    <li><a class="dropdown-item" href="assignment7.html">Assignment 7</a></li>
                 </ul>
               </li>
             </ul>
@@ -45,36 +47,35 @@
             <br />
             <footer class="blockquote-footer">Assignment 5 <cite title="Source Title"> [ 17 Dic 2020 ]</cite></footer>
             <div>
-                <p class="h3">1- Answer these questions, then record them and upload them.</p>
-                <p class="h5">What type of company is your company? What type of companies do you work with?</p>
-                <p class="text-break">
-                    I do not work at the moment, but I will start working on January 4, and it is a company 
-                    that is dedicated to providing education services
-                </p>
-
-                <p class="h3">2. Write sentences about five companies that you know or like, 
+                <p class="h5">1. What type of company is your company? What type of companies do you work with?</p>
+                <li>
+                  I don't have a job, but I would really like to work for a company in the education sector
+                </li>
+                <audio src="audio/Recording_16.mp3" preload="auto" controls></audio>
+                <p class="h5">2. Write sentences about five companies that you know or like, 
                     explaining in the sentences if they provide services or produce products. Record them and upload them.
                 </p>
-                <p class="text-break">
+                <li>
                     Walmar produces products about stationery, food and more
-                </p>
-                <p class="text-break">
+                </li>
+                <li>
                     Coca-Cola provides beverage services
-                </p>
-                <p class="text-break">
+                </li>
+                <li>
                     Facebook provides social media service
-                </p>
-                <p class="text-break">
+                </li>
+                <li>
                     Total Play provides Internet services
-                </p>
-                <p class="text-break">
+                </li>
+                <li>
                     Federal Electricity Commission produces electricity services
-                </p>
-
-                <p class="h3">3. Answer these questions on audio and upload it.</p>
+                </li>
+                <audio src="audio/Recording_19.mp3" preload="auto" controls></audio>
+                <p class="h5">3. Answer these questions on audio and upload it.</p>
                 <p class="h5">Last year and next year</p>
                 <p class="h5">A colleague’s telephone number</p>
                 <p class="h5">Number of business areas and types of product or services at your company</p>
+                <audio src="audio/Recording_20.mp3" preload="auto" controls></audio>
             </div>
           </div>
     </section>
