--- a/assignment6.html
+++ b/assignment6.html
@@ -29,9 +29,9 @@
                     <li><a class="dropdown-item" href="index.html">Introduction</a></li>
                     <li><a class="dropdown-item" href="vocabulary.html">Vocabulary Class 1</a></li>
                     <li><a class="dropdown-item" href="family.html">Family description</a></li>
-                    <li><a class="dropdown-item" href="#">Video review</a></li>
+                    <li><a class="dropdown-item" href="videoreview.html">Video review</a></li>
                     <li><a class="dropdown-item" href="assignment5.html">Assignment 5</a></li>
-                    <li><a class="dropdown-item" href="assignment6.html">Assignment 6</a></li>
+                    <li><a class="dropdown-item" href="#">Assignment 6</a></li>
                     <li><a class="dropdown-item" href="assignment7.html">Assignment 7</a></li>
                 </ul>
               </li>
@@ -45,28 +45,41 @@
                 <p class="fs-1">My English Class Ailed Vivanco</p>
             </div>
             <br />
-            <footer class="blockquote-footer">Video Review <cite title="Source Title"> [ 7 Dic 2020 ]</cite></footer>
-            <div class="assignment-2">
-                <img class="img-profile" src="images/chat.svg"  alt="Profile" height="200" width="200">
-                <p class="text-break text-profile">
-                  The percentage of native English speakers is very low.
-                </p>
-                <p class="text-break text-profile">           
-                  Being native can be an advantage of better pronunciation
-                </p>
-                <p class="text-break text-profile">              
-                  Have confidence in yourself to speak
-                </p>
-                <p class="text-break text-profile">
-                  Accept being wrong
-                </p>
-                <p class="text-break text-profile">
-                  Knowing the subject is important
-                </p>
+            <footer class="blockquote-footer">Assignment 6 Audio -> The English We Speak<cite title="Source Title"> [ 21 Dic 2020 ]</cite></footer>
+            <div class="row">
+                <div class="col-3"></div>
+                <div class="col-6">
+                  <table class="table">
+                    <thead>
+                      <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Words</th>
+                        <th scope="col">New Words</th>
+                      </tr>
+                    </thead>
+                    <tbody>
+                      <tr>
+                        <th scope="row">1</th>
+                        <td>Shopping = Compras</td>
+                        <td>Attractive = Atractivo</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">2</th>
+                        <td>Speak = Hablar</td>
+                        <td>Fleek = Veloz</td>
+                      </tr>
+                      <tr>
+                        <th scope="row">3</th>
+                        <td>Expensive = Costoso</td>
+                        <td>Now = Ahora</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+                <div class="col-3"></div>
             </div>
-          </div>
+        </div>
     </section>
-
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
