--- a/assignment7.html
+++ b/assignment7.html
@@ -29,10 +29,10 @@
                     <li><a class="dropdown-item" href="index.html">Introduction</a></li>
                     <li><a class="dropdown-item" href="vocabulary.html">Vocabulary Class 1</a></li>
                     <li><a class="dropdown-item" href="family.html">Family description</a></li>
-                    <li><a class="dropdown-item" href="#">Video review</a></li>
+                    <li><a class="dropdown-item" href="videoreview.html">Video review</a></li>
                     <li><a class="dropdown-item" href="assignment5.html">Assignment 5</a></li>
                     <li><a class="dropdown-item" href="assignment6.html">Assignment 6</a></li>
-                    <li><a class="dropdown-item" href="assignment7.html">Assignment 7</a></li>
+                    <li><a class="dropdown-item" href="#">Assignment 7</a></li>
                 </ul>
               </li>
             </ul>
@@ -45,28 +45,36 @@
                 <p class="fs-1">My English Class Ailed Vivanco</p>
             </div>
             <br />
-            <footer class="blockquote-footer">Video Review <cite title="Source Title"> [ 7 Dic 2020 ]</cite></footer>
-            <div class="assignment-2">
-                <img class="img-profile" src="images/chat.svg"  alt="Profile" height="200" width="200">
-                <p class="text-break text-profile">
-                  The percentage of native English speakers is very low.
-                </p>
-                <p class="text-break text-profile">           
-                  Being native can be an advantage of better pronunciation
-                </p>
-                <p class="text-break text-profile">              
-                  Have confidence in yourself to speak
-                </p>
-                <p class="text-break text-profile">
-                  Accept being wrong
-                </p>
-                <p class="text-break text-profile">
-                  Knowing the subject is important
-                </p>
+            <footer class="blockquote-footer">Assignment 7 <cite title="Source Title"> [ 22 Dic 2020 ]</cite></footer>
+            <div class="row">
+                <div class="col-2"></div>
+                <div class="col-8">
+                    <p class="h5">Describe the city where you live, answering these questions:</p>
+                    <li>
+                        Is there nice weather? In my delegation there were not so many places and the supermarkets were somewhat remote.
+                    </li>
+                    <audio src="audio/Recording_28.mp3" preload="auto" controls></audio>
+                    <li>
+                        Is there a beach nearby or there? No, there isn't near my city, the beach is far.
+                    </li>
+                    <audio src="audio/Recording_29.mp3" preload="auto" controls></audio>
+                    <li>
+                        Are there hotels and business centres? Yes, there are and also near my house.
+                    </li>
+                    <audio src="audio/Recording_30.mp3" preload="auto" controls></audio>
+                    <li>
+                        Is there museums? Yes, there is, and near my house a 30 minutes.
+                    </li>
+                    <audio src="audio/Recording_31.mp3" preload="auto" controls></audio>
+                    <li>
+                        Is there an airport? Yes, there is, and near my house a 20 minutes.
+                    </li>
+                    <audio src="audio/Recording_32.mp3" preload="auto" controls></audio>
+                </div>
+                <div class="col-2"></div>
             </div>
-          </div>
+        </div>
     </section>
-
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
