--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
                   Sections
                 </a>
                 <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
-                  <li><a class="dropdown-item" href="vocabulary.html">Vocabulary Class 1</a></li>
                   <li><a class="dropdown-item" href="#">Introduction</a></li>
+                  <li><a class="dropdown-item" href="vocabulary.html">Vocabulary Class 1</a></li>
                   <li><a class="dropdown-item" href="family.html">Family description</a></li>
                   <li><a class="dropdown-item" href="videoreview.html">Video review</a></li>
                   <li><a class="dropdown-item" href="assignment5.html">Assignment 5</a></li>
+                  <li><a class="dropdown-item" href="assignment6.html">Assignment 6</a></li>
+                  <li><a class="dropdown-item" href="assignment7.html">Assignment 7</a></li>
                 </ul>
               </li>
             </ul>
