--- a/assignment8.html
+++ b/assignment8.html
@@ -28,12 +28,12 @@
                 <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDarkDropdownMenuLink">
                     <li><a class="dropdown-item" href="index.html">Introduction</a></li>
                     <li><a class="dropdown-item" href="vocabulary.html">Vocabulary Class 1</a></li>
-                    <li><a class="dropdown-item" href="#">Family description</a></li>
+                    <li><a class="dropdown-item" href="family.html">Family description</a></li>
                     <li><a class="dropdown-item" href="videoreview.html">Video review</a></li>
                     <li><a class="dropdown-item" href="assignment5.html">Assignment 5</a></li>
                     <li><a class="dropdown-item" href="assignment6.html">Assignment 6</a></li>
                     <li><a class="dropdown-item" href="assignment7.html">Assignment 7</a></li>
-                    <li><a class="dropdown-item" href="assignment8.html">Assignment 8</a></li>
+                    <li><a class="dropdown-item" href="#">Assignment 8</a></li>
                 </ul>
               </li>
             </ul>
@@ -46,25 +46,61 @@
                 <p class="fs-1">My English Class Ailed Vivanco</p>
             </div>
             <br />
-            <footer class="blockquote-footer">Description about my family <cite title="Source Title"> [ 7 Dic 2020 ]</cite></footer>
-            <div class="assignment-2">
-                <img class="img-profile" src="images/family.png"  alt="Profile" height="250" width="420"><br />
-                <audio src="audio/Recording_12.mp3" preload="auto" controls></audio>
-                <p class="text-break text-profile">
-                    My family is big but this time I'm going to talk about my mom and my brother.
-
-                    My mother is an accountant, she is 52 and currently works independently.
-                    My brother is a Systems Engineer, he is 26 and currently he is a Technical Leader IT in Buggy TLC.
-                </p>
-                <audio src="audio/Recording_10.mp3" preload="auto" controls></audio>
-                <p class="text-break text-profile">
-                    I will talk about my brother, he's 26, he was born Mexico City, he likes his work a lot, he likes research and contribute.
-                    He's in charge of all data, security and cloud computing of tecnology, also develop backend and frontend the bussines model and web desing.
-                </p>
+            <footer class="blockquote-footer">Assignment 8 <cite title="Source Title"> [ 06 January 2021 ]</cite></footer>
+            <div class="row">
+                <div class="col-2"></div>
+                <div class="col-8">
+                    <p class="h5">Choose the correct word and rewrite the sentences.</p>
+                    <ul>
+                      <li>
+                        1. Touch / Insert / Key in your credit card, then key in / push / touch the screen and choose your ticket.
+                        <ul>
+                          <li>
+                            Insert your credit card, then touch the screen and choose your ticket.
+                          </li>
+                        </ul>
+                      </li>
+                      <li>
+                        2. Switch on / Log on / Click on your PC and touch / connect / enter your username.
+                        <ul>
+                          <li>
+                            Switch on your PC and enter your username.
+                          </li>
+                        </ul>
+                      </li>
+                      <li>
+                        3. Touch / Click on / Switch off the icon, then connect / key in / insert to the Internet.
+                        <ul>
+                          <li>
+                            Click on the icon, the connect to the internet.
+                          </li>
+                        </ul>
+                      </li>
+                      <li>
+                        4. Log on to / Enter / Press the green button to make the copies.
+                        <ul>
+                          <li>
+                            Press the green button to make the copies.
+                          </li>
+                        </ul>
+                      </li>
+                    </ul>
+                    <p class="h5">Write the actions that you do at work, based on the exercise 6.</p>
+                    <ul>
+                      <li>Research my laptop</li>
+                      <li>Click on select a program</li>
+                      <li>Touch the screen my mobile phone</li>
+                      <li>Press the button turn of my laptop</li>
+                      <li>Log on in the account email</li>
+                      <li>Switch on my mobile phone</li>
+                      <li>Switch off the printer</li>
+                      <li>Key in password to login</li>
+                    </ul>
+                </div>
+                <div class="col-2"></div>
             </div>
-          </div>
+        </div>
     </section>
-
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
