--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                   <li><a class="dropdown-item" href="assignment5.html">Assignment 5</a></li>
                   <li><a class="dropdown-item" href="assignment6.html">Assignment 6</a></li>
                   <li><a class="dropdown-item" href="assignment7.html">Assignment 7</a></li>
+                  <li><a class="dropdown-item" href="assignment8.html">Assignment 8</a></li>
                 </ul>
               </li>
             </ul>
